<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/parentLayout"
    tools:context=".login_page">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".45"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"

        app:srcCompat="@drawable/rect_red_shape" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="114dp"
        android:layout_height="114dp"
        android:layout_marginTop="44dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/jipmer_logo" />

    <TextView
        android:id="@+id/textView2"
        style="@style/splash_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:background="@drawable/red_box"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".66"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/login_title"
                    style="@style/normal_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:text="@string/login_txt" />

                <TextView
                    android:id="@+id/age_tv"
                    style="@style/normal_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/user_name_txt" />

                <EditText
                    android:id="@+id/userName"
                    style="@style/normal_edit_txt"
                    android:layout_gravity="center"


                    android:gravity="center"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    />

                <TextView
                    android:id="@+id/medicine_tv"
                    style="@style/normal_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="23dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/password" />

                <EditText

                    android:id="@+id/password"
                    style="@style/normal_edit_txt"

                    android:layout_gravity="center"




                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    />

                <TextView
                    android:id="@+id/forgot_password"
                    style="@style/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:onClick="reset_password"
                    android:text="@string/forgot_password"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/notVerified"
                    style="@style/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:visibility="gone"

                    android:text="@string/verify_email" />

                <Button
                    android:id="@+id/login_bt"
                    style="@style/normal_bt"
                    android:layout_marginTop="20dp"

                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/login_txt"
                    app:cornerRadius="110dp" />

                <TextView
                    android:id="@+id/dont_have_tv"
                    style="@style/normal_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/dont_have_account" />

                <TextView
                    android:id="@+id/create_ac_tv"
                    style="@style/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="create_account"

                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/create_account" />


            </LinearLayout>


        </ScrollView>





    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>